samples/_failures_safe/1761248489_a7ff82_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76607755.c: In function ‘main’:
./samples/SAFE/__tmp_76607755.c:179:5: error: expected declaration or statement at end of input
  179 |     char input[256];
      |     ^~~~
